# Stoffel

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  spec.txt
src/: init.rs  main.rs
src/templates/python/: main.py  pyproject.toml  secure_computation.stfl  test_main.py
